[package]
name = "chomchom"
version = "0.3.3"
edition = "2021"
license = "MIT"
authors = ["Bertik23 <chomchom@bertik23.tech>"]
description = "A simple parser generator for Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
